[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Backgrounds/Shroom background 1.png" type="Texture" id=1]
[ext_resource path="res://Scripts/TableOfContents.gd" type="Script" id=2]
[ext_resource path="res://Scenes/UI/PageNumber.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Icons/TextBox.png" type="Texture" id=4]
[ext_resource path="res://Assets/Fonts/FancyQuisleyRegular-eZq4e.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Assets/Fonts/Milky Coffee.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Scenes/Menus/Transition.tscn" type="PackedScene" id=9]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 6 )

[sub_resource type="Animation" id=3]
resource_name = "start"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer/Table of Contents:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.9, 2.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("VBoxContainer/HBoxContainer:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.9, 2.7, 4.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="0-2" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -1.0
margin_bottom = -1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 154.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 50.0
rect_min_size = Vector2( 0, 50 )

[node name="Table of Contents" type="RichTextLabel" parent="VBoxContainer"]
margin_top = 54.0
margin_right = 1024.0
margin_bottom = 129.0
rect_min_size = Vector2( 0, 75 )
rect_clip_content = false
custom_colors/default_color = Color( 0.0588235, 0.0588235, 0.0588235, 1 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_enabled = true
bbcode_text = "[center][wave amp=4]Table of Contents"
text = "Table of Contents"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Control2" type="Control" parent="VBoxContainer"]
margin_top = 133.0
margin_right = 1024.0
margin_bottom = 158.0
rect_min_size = Vector2( 0, 25 )

[node name="Control3" type="Control" parent="VBoxContainer"]
margin_top = 162.0
margin_right = 1024.0
margin_bottom = 187.0
rect_min_size = Vector2( 0, 25 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 191.0
margin_right = 1024.0
margin_bottom = 521.0
rect_pivot_offset = Vector2( 420, 357 )

[node name="Control" type="Control" parent="VBoxContainer/HBoxContainer"]
margin_right = 175.0
margin_bottom = 330.0
rect_min_size = Vector2( 175, 330 )

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 179.0
margin_right = 379.0
margin_bottom = 330.0

[node name="Chapter 1" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 200.0
margin_bottom = 50.0
rect_min_size = Vector2( 200, 50 )
text = "Chapter 1"

[node name="Chapter 2" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 54.0
margin_right = 200.0
margin_bottom = 104.0
rect_min_size = Vector2( 200, 50 )
text = "Chapter 2"

[node name="Chapter 3" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 108.0
margin_right = 200.0
margin_bottom = 158.0
rect_min_size = Vector2( 200, 50 )
text = "Chapter 3"

[node name="Chapter 4" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 162.0
margin_right = 200.0
margin_bottom = 212.0
rect_min_size = Vector2( 200, 50 )
text = "Chapter 4"

[node name="Chapter 5" type="Button" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 216.0
margin_right = 200.0
margin_bottom = 266.0
rect_min_size = Vector2( 200, 50 )
text = "Chapter 5"

[node name="Control2" type="Control" parent="VBoxContainer/HBoxContainer"]
margin_left = 383.0
margin_right = 483.0
margin_bottom = 330.0
rect_min_size = Vector2( 100, 0 )

[node name="Control3" type="Control" parent="VBoxContainer/HBoxContainer"]
margin_left = 487.0
margin_right = 587.0
margin_bottom = 330.0
rect_min_size = Vector2( 100, 0 )

[node name="NinePatchRect2" type="NinePatchRect" parent="VBoxContainer/HBoxContainer/Control3"]
show_behind_parent = true
anchor_left = 0.17
anchor_top = 0.318182
anchor_right = 3.17
anchor_bottom = 0.551515
margin_right = 900.0
margin_bottom = 231.0
grow_horizontal = 2
rect_scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 4 )
region_rect = Rect2( 56.1826, 76.4531, 1372.2, 1378.51 )
patch_margin_left = 59
patch_margin_top = 61
patch_margin_right = 49
patch_margin_bottom = 64
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/Control3"]
anchor_left = 0.26
anchor_top = 0.381818
anchor_right = 2.36
anchor_bottom = 0.454545
margin_right = 1.52588e-05
__meta__ = {
"_edit_use_anchors_": true
}

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/Control3/HBoxContainer"]
margin_right = 159.0
margin_bottom = 39.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "    Or Enter a Page     
      Number Here:    "

[node name="SpinBox" type="SpinBox" parent="VBoxContainer/HBoxContainer/Control3/HBoxContainer"]
margin_left = 163.0
margin_right = 237.0
margin_bottom = 39.0
min_value = -1.0
max_value = 80.0
page = 1.0
value = 1.0

[node name="GoToPage" type="Button" parent="VBoxContainer/HBoxContainer/Control3/HBoxContainer"]
margin_left = 241.0
margin_right = 278.0
margin_bottom = 39.0
text = "GO!"

[node name="PageNumber" parent="." instance=ExtResource( 3 )]

[node name="NinePatchRect2" parent="PageNumber" index="2"]
visible = false

[node name="HBoxContainer" parent="PageNumber" index="3"]
visible = false

[node name="Transition" parent="." instance=ExtResource( 9 )]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/start = SubResource( 3 )

[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/Chapter 1" to="." method="_on_Chapter_1_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/Chapter 2" to="." method="_on_Chapter_2_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/Chapter 3" to="." method="_on_Chapter_3_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/Chapter 4" to="." method="_on_Chapter_4_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/VBoxContainer/Chapter 5" to="." method="_on_Chapter_5_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Control3/HBoxContainer/GoToPage" to="." method="_on_GoToPage_pressed"]

[editable path="PageNumber"]
